--- a/My portfolio/index.html
+++ b/My portfolio/index.html
@@ -85,7 +85,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Portfolio Website</h5>
                             <p class="card-text">Built an amazzing responsive website with bootstrap</p>
-                            <a href="#" class="btn btn-dark" target="_blank">View Source <i class="fab fa-github"></i></a>
+                            <a href="https://github.com/NikitaGupta-17/OIBSIP/tree/main/My%20portfolio" class="btn btn-dark" target="_blank">View Source <i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
